--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,7 @@
     {{!-- <link rel="stylesheet" href="public/css/style.css"> --}}
 
   <link rel="icon" type="image/x-icon" href="/favicon.png">  
-    <title>eBook Library</title>
+    <title>Bloggers</title>
   </head>
 
   <body>
@@ -41,26 +41,12 @@
         <div class="collapse navbar-collapse navigator flex" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="/"
-                >Home <span class="sr-only">(current)</span></a
-              >
+              <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/browse">Browse</a>
+              <a class="nav-link" href="/blogs">Blogs</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/cart">Cart</a>
-            </li>
-            {{#if loggedIn}}
-            <li class="nav-item">
-              <a class="nav-link" href="/purchased">Purchase History</a>
-            </li>
-            {{/if}}
-            {{#if loggedIn}}
-            <li class="nav-item">
-              <a class="nav-link" href="/upload">Upload</a>
-            </li>
-            {{/if}}
+            
           </ul>
           <ul class="navbar-nav ml-auto justify-space-between">
             <li style="display: flex" class="nav-item">
@@ -86,7 +72,7 @@
 
     <br>
     <footer class="footer bg-dark text-light p-4" style="text-align: center; justify-content: center;">
-      2023 eBook Library @ ALL RIGHTS RESERVED
+      2023 Blog_CMS @ ALL RIGHTS RESERVED
     </footer>
 
     <!-- jQuery -->
