--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,18 +1,23 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <link rel="stylesheet" href="css/home.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
-</head>
-<body>
-
-
- 
-  <script src="/js/home.js"></script>
-</body>
-</html>
+{{#each bloged as |blogs| }}
+<div class="row mb-4 project">
+  <div class="col-md-5">
+    <h2>
+      <!-- Call helper function with triple brackets to render the emoji span as HTML -->
+      {{{get_emoji}}}
+      <a href="/blogs/{{blogs.id}}">{{blogs.name}}</a>
+    </h2>
+    <p>
+      <span for="img" aria-label="money">💲</span>
+      <!-- Pass needed_funding value to the helper function -->
+      {{!-- <span class="dollar-amount">{{format_amount project.needed_funding}}</span> --}}
+      needed!
+    </p>
+    <p>Created by {{blogs.user.username}} on {{format_date blogs.date_created}}</p>
+  </div>
+  <div class="col-md-7">
+    <p>
+      {{blogs.description}}
+    </p>
+  </div>
+</div>
+{{/each}}
