--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,9 +13,9 @@
       crossorigin="anonymous"
     />
     <!--CSS-->
-    {{!-- <link rel="stylesheet" href="public/css/style.css"> --}}
+    <link rel="stylesheet" href="/css/styles.css">
 
-  <link rel="icon" type="image/x-icon" href="/favicon.png">  
+ 
     <title>Bloggers</title>
   </head>
 
@@ -68,7 +68,7 @@
       {{{ body }}}
 
 
-    </div>  {{!-- /Container --}}
+    </div>  
 
     <br>
     <footer class="footer bg-dark text-light p-4" style="text-align: center; justify-content: center;">
