--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,23 +1,52 @@
+
+
+<!-- Full Page Image Header with Vertically Centered Content -->
+<header class="masthead">
+  <div class="container h-100">
+    <div class="row h-100 align-items-center">
+      <div class="col-12 text-center">
+        <h1 class="fw-light">Welcome to Bloggers... Have your say on today's topics !</h1>
+        <p class="lead">please sign to view Blogs</p>
+      </div>
+    </div>
+  </div>
+</header>
+ {{#if loggedIn}}
+            
 {{#each bloged as |blogs| }}
 <div class="row mb-4 project">
   <div class="col-md-5">
     <h2>
-      <!-- Call helper function with triple brackets to render the emoji span as HTML -->
-      {{{get_emoji}}}
       <a href="/blogs/{{blogs.id}}">{{blogs.name}}</a>
     </h2>
-    <p>
-      <span for="img" aria-label="money">💲</span>
-      <!-- Pass needed_funding value to the helper function -->
-      {{!-- <span class="dollar-amount">{{format_amount project.needed_funding}}</span> --}}
-      needed!
-    </p>
-    <p>Created by {{blogs.user.username}} on {{format_date blogs.date_created}}</p>
+    
+    <p>Created by {{user.username}} on {{format_date blogs.date_created}}</p>
   </div>
   <div class="col-md-7">
     <p>
       {{blogs.description}}
     </p>
+     {{#if blogs.comment}}
+      <p><b>recent comments:</b><br>
+      {{blogs.comment}}
+    </p>
+  
+  {{/if}}
+    
   </div>
 </div>
 {{/each}}
+{{/if}}
+
+<style>
+.masthead {
+  height: 100vh;
+  min-height: 500px;
+  background-image: url('https://source.unsplash.com/BtbjCFUvBXs/1920x1080');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+
+</style>
