--- a/views/myBlogs.handlebars
+++ b/views/myBlogs.handlebars
@@ -6,17 +6,14 @@
 
 <div class="row mt-4">
   <div class="col-md-6">
-    <h3>Create a New Project:</h3>
+    <h3>Make new Blog:</h3>
 
     <form class="form new-project-form">
       <div class="form-group">
-        <label for="project-name">project name:</label>
+        <label for="project-name">Blog name:</label>
         <input class="form-input" type="text" id="project-name" name="project-name" />
       </div>
-      <div class="form-group">
-        <label for="project-funding">needed funding ($):</label>
-        <input class="form-input" type="number" id="project-funding" name="project-funding" />
-      </div>
+      
       <div class="form-group">
         <label for="project-desc">description:</label>
         <textarea class="form-input" id="project-desc" name="project-desc"></textarea>
@@ -26,23 +23,27 @@
       </div>
     </form>
   </div>
-
-  {{#if blogs.length}}
+  {{#if bloged.length}}
   <div class="col-md-6 project-list">
-    <h3>Current Projects:</h3>
+    <h3>Current Blogs:</h3>
 
-    {{#each blogs as |blog|}}
+    {{#each bloged as |blogs|}}
     <div class="row mb-2">
       <div class="col-md-8">
-        <h4><a href="/project/{{blog.id}}">{{blog.name}}</a></h4>
+        <h4><a href="/blogs/{{blogs.id}}">{{blogs.name}}</a></h4>
       </div>
       <div class="col-md-4">
-        <button class="btn btn-sm btn-danger" data-id="{{blog.id}}">DELETE</button>
+        <button class="btn btn-sm btn-danger " data-id="{{blogs.id}}">DELETE</button>
       </div>
     </div>
     {{/each}}
   </div>
   {{/if}}
+  
 </div>
-
-<script src="./js/profile.js"></script>
+<style>
+  .container{
+    height: 65vh;
+  }
+</style>
+<script src="/js/blogs.js"></script>
